--- a/source/less/blocks/btn.less
+++ b/source/less/blocks/btn.less
@@ -1,20 +1,19 @@
-.btn
-{
-    font-size: 17px;
-    font-weight: bold;
-    line-height: 20px;
+.btn {
+  font-size: 17px;
+  font-weight: bold;
+  line-height: 20px;
 
-    display: block;
+  display: block;
 
-    box-sizing: border-box;
-    width: 260px;
-    min-height: 52px;
-    padding: 17px 0;
+  box-sizing: border-box;
+  width: 260px;
+  min-height: 52px;
+  padding: 17px 0;
 
-    text-align: center;
-    text-decoration: none;
-    text-transform: uppercase;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
 
-    color: rgb(68, 68, 68);
-    border: 2px solid rgb(68, 68, 68);
+  color: rgb(68, 68, 68);
+  border: 2px solid rgb(68, 68, 68);
 }
