--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -1,153 +1,131 @@
-.catalog__item
-{
-    margin-top: 30px;
+.catalog__item {
+  margin-top: 30px;
 
-    outline: 1px solid red;
+  outline: 1px solid red;
 }
 
-.catalog__img
-{
-    margin: 0 auto;
+.catalog__img {
+  margin: 0 auto;
 
-    background-color: rgb(241, 241, 241);
+  background-color: rgb(241, 241, 241);
 }
 
-.catalog__title
-{
-    text-decoration: none;
+.catalog__title {
+  text-decoration: none;
 
-    outline: 1px solid red;
+  outline: 1px solid red;
 }
 
-.catalog__title h2
-{
-    font-size: 17px;
-    font-weight: bold;
-    line-height: 24px;
+.catalog__title h2 {
+  font-size: 17px;
+  font-weight: bold;
+  line-height: 24px;
 
-    margin: 0;
+  margin: 0;
 }
 
-.catalog__description
-{
+.catalog__description {
+  display: flex;
+
+  padding: 0 30px;
+
+  outline: 1px solid red;
+
+  flex-wrap: wrap;
+}
+
+.catalog__specs {
+  font-size: 13px;
+  line-height: 30px;
+
+  width: 100%;
+  margin: 0;
+  padding-bottom: 25px;
+
+  outline: 1px solid red;
+}
+
+.catalog__order {
+  display: flex;
+}
+
+.catalog__price {
+  font-size: 15px;
+  font-weight: bold;
+  line-height: 24px;
+
+  width: 65%;
+  margin: 0;
+  padding: 19px 0;
+
+  outline: 1px solid red;
+}
+
+.catalog__basket-icon {
+  width: 35%;
+
+  outline: 1px solid red;
+}
+
+@media (min-width: @tablet-width) {
+  .catalog__item {
     display: flex;
 
-    padding: 0 30px;
+    height: 334px;
+  }
 
-    outline: 1px solid red;
+  .catalog__link-wrapper {
+    width: 50%;
+  }
+
+  .catalog__description {
+    display: flex;
+    flex-direction: column;
+
+    width: 50%;
+  }
+
+  .catalog__title {
+    width: 100%;
+  }
+
+  .catalog__title h2 {
+    font-size: 20px;
+
+    padding-top: 10%;
+  }
+
+  .catalog__specs {
+    font-size: 15px;
+
+    flex-grow: 1;
+  }
+
+  .catalog__price {
+    font-size: 17px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .catalog {
+    display: flex;
 
     flex-wrap: wrap;
-}
+    justify-content: space-between;
+  }
+  .catalog__item {
+    width: 30%;
+    height: 659px;
 
-.catalog__specs
-{
-    font-size: 13px;
-    line-height: 30px;
+    flex-wrap: wrap;
+  }
 
+  .catalog__description {
     width: 100%;
-    margin: 0;
-    padding-bottom: 25px;
+  }
 
-    outline: 1px solid red;
-}
-
-.catalog__order
-{
-    display: flex;
-}
-
-.catalog__price
-{
-    font-size: 15px;
-    font-weight: bold;
-    line-height: 24px;
-
-    width: 65%;
-    margin: 0;
-    padding: 19px 0;
-
-    outline: 1px solid red;
-}
-
-.catalog__basket-icon
-{
-    width: 35%;
-
-    outline: 1px solid red;
-}
-
-@media (min-width: @tablet-width)
-{
-    .catalog__item
-    {
-        display: flex;
-
-        height: 334px;
-    }
-
-    .catalog__link-wrapper
-    {
-        width: 50%;
-    }
-
-    .catalog__description
-    {
-        display: flex;
-        flex-direction: column;
-
-        width: 50%;
-    }
-
-    .catalog__title
-    {
-        width: 100%;
-    }
-
-    .catalog__title h2
-    {
-        font-size: 20px;
-
-        padding-top: 10%;
-    }
-
-    .catalog__specs
-    {
-        font-size: 15px;
-
-        flex-grow: 1;
-    }
-
-    .catalog__price
-    {
-        font-size: 17px;
-    }
-}
-
-@media (min-width: @desktop-width)
-{
-    .catalog
-    {
-        display: flex;
-
-        flex-wrap: wrap;
-        justify-content: space-between;
-    }
-    .catalog__item
-    {
-        width: 30%;
-        height: 659px;
-
-        flex-wrap: wrap;
-    }
-
-    .catalog__description
-    {
-        width: 100%;
-    }
-
-    .catalog__link-wrapper
-    {
-        width: 100%;
-        height: 462px;
-    }
+  .catalog__link-wrapper {
+    width: 100%;
+    height: 462px;
+  }
 }
