--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,77 +1,67 @@
-.page-footer
-{
-    background-color: @color-dark-grey;
+.page-footer {
+  background-color: @color-dark-grey;
 }
 
-.social__list
-{
+.social__list {
+  display: flex;
+
+  padding: 26px 0;
+
+  outline: 1px solid red;
+
+  .reset-list();
+}
+
+.social__item {
+  width: 24px;
+  height: 30px;
+
+  outline: 1px solid green;
+}
+
+.designed {
+  font-size: 19px;
+  font-weight: bold;
+  line-height: 18px;
+
+  padding: 26px 0;
+
+  text-decoration: none;
+
+  outline: 1px solid red;
+}
+
+@media (min-width: @tablet-width) {
+  .page-footer__wrapper {
     display: flex;
 
-    padding: 26px 0;
+    padding: 0 50px 0;
 
-    outline: 1px solid red;
+    justify-content: space-between;
+  }
 
-    .reset-list();
-}
+  .page-footer__logo {
+    display: block;
 
-.social__item
-{
-    width: 24px;
-    height: 30px;
+    width: 25%;
 
-    outline: 1px solid green;
-}
+    text-align: left;
+  }
 
-.designed
-{
-    font-size: 19px;
-    font-weight: bold;
-    line-height: 18px;
+  .social {
+    width: 200px;
+    height: 100px;
+  }
 
-    padding: 26px 0;
+  .social__list {
+    display: flex;
 
-    text-decoration: none;
+    padding-top: 22%;
 
-    outline: 1px solid red;
-}
+    justify-content: space-between;
+  }
 
-@media (min-width: @tablet-width)
-{
-    .page-footer__wrapper
-    {
-        display: flex;
-
-        padding: 0 50px 0;
-
-        justify-content: space-between;
-    }
-
-    .page-footer__logo
-    {
-        display: block;
-
-        width: 25%;
-
-        text-align: left;
-    }
-
-    .social
-    {
-        width: 200px;
-        height: 100px;
-    }
-
-    .social__list
-    {
-        display: flex;
-
-        padding-top: 22%;
-
-        justify-content: space-between;
-    }
-
-    .designed
-    {
-        width: 25%;
-    }
+  .designed {
+    width: 25%;
+  }
 }
