--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,28 +1,24 @@
-.page-main
-{
-    outline: 1px solid red;
+.page-main {
+  outline: 1px solid red;
 }
 
-.page-main__title
-{
-    font-size: 27px;
-    font-weight: bold;
-    line-height: 30px;
+.page-main__title {
+  font-size: 27px;
+  font-weight: bold;
+  line-height: 30px;
 
-    margin: 0 0 30px 0;
-    padding: 75px 0;
+  margin: 0 0 30px 0;
+  padding: 75px 0;
 
-    text-align: center;
+  text-align: center;
 
-    outline: 1px solid red;
-    background-color: rgb(241, 241, 241);
+  outline: 1px solid red;
+  background-color: rgb(241, 241, 241);
 }
 
-@media (min-width: @tablet-width)
-{
-    .page-main__title
-    {
-        margin-top: -90px;
-        padding: 91px 0;
-    }
+@media (min-width: @tablet-width) {
+  .page-main__title {
+    margin-top: -90px;
+    padding: 91px 0;
+  }
 }
