--- a/source/less/blocks/filter.less
+++ b/source/less/blocks/filter.less
@@ -116,8 +116,7 @@
     .reset-list();
   }
 
-  .filter__input-list--checkbox
-  .filter__input-item {
+  .filter__input-list--checkbox .filter__input-item {
     width: 50%;
   }
 
@@ -145,8 +144,7 @@
     margin-left: 113px;
   }
 
-  .filter__input-list--checkbox
-  .filter__input-item {
+  .filter__input-list--checkbox .filter__input-item {
     width: 30%;
   }
 
