--- a/source/less/blocks/opinions.less
+++ b/source/less/blocks/opinions.less
@@ -78,7 +78,7 @@
 
     padding: 70px 50px 53px 50px;
 
-    background: @color-light-grey url('../../../img/review@1x.jpg') no-repeat 0;
+    background: @color-light-grey url("../../../img/review@1x.jpg") no-repeat 0;
 
     flex-wrap: wrap;
     justify-content: space-between;
@@ -127,6 +127,7 @@
     top: 322px;
     right: 50px;
   }
+
   .opinions__text {
     max-width: 790px;
   }
