--- a/source/less/blocks/about-us.less
+++ b/source/less/blocks/about-us.less
@@ -2,6 +2,16 @@
   padding: 30px 0 53px 0;
 
   outline: 1px solid blue;
+
+  @media (min-width: @tablet-width) {
+    max-width: @tablet-width;
+    padding: 60px 50px 80px 50px;
+  }
+
+  @media (min-width: @desktop-width) {
+    max-width: @desktop-width;
+    padding: 68px 50px 90px 175px;
+  }
 }
 
 .about-us__title {
@@ -13,6 +23,27 @@
   padding-bottom: 28px;
 
   outline: 1px solid blue;
+
+  @media (min-width: @tablet-width) {
+    font-size: 43px;
+    line-height: 50px;
+
+    display: flex;
+
+    align-content: center;
+    flex-wrap: wrap;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 53px;
+    line-height: 57px;
+
+    display: flex;
+
+    width: 65%;
+
+    flex-wrap: wrap;
+  }
 }
 
 .about-us__list {
@@ -23,32 +54,8 @@
   outline: 1px solid blue;
 
   .reset-list();
-}
 
-.about-us__item {
-  height: 61px;
-  padding: 85px 0 27px 0;
-
-  outline: 1px solid blue;
-}
-
-@media (min-width: @tablet-width) {
-  .about-us {
-    max-width: @tablet-width;
-    padding: 60px 50px 80px 50px;
-  }
-
-  .about-us__title {
-    font-size: 43px;
-    line-height: 50px;
-
-    display: flex;
-
-    align-content: center;
-    flex-wrap: wrap;
-  }
-
-  .about-us__list {
+  @media (min-width: @tablet-width) {
     font-size: 20px;
     line-height: 22px;
 
@@ -57,57 +64,46 @@
     flex-wrap: wrap;
   }
 
-  .about-us__item {
-    width: 50%;
-  }
-
-  .about-us__item--eco {
-    order: 0;
-  }
-
-  .about-us__item--price {
-    order: 2;
-  }
-
-  .about-us__item--like {
-    order: 4;
-  }
-
-  .about-us__item--handmade {
-    order: 1;
-  }
-
-  .about-us__item--homeland {
-    order: 3;
-  }
-
-  .about-us__item--giftwrap {
-    order: 5;
+  @media (min-width: @desktop-width) {
+    width: 65%;
   }
 }
 
-@media (min-width: @desktop-width) {
-  .about-us {
-    max-width: @desktop-width;
-    padding: 68px 50px 90px 175px;
+.about-us__item {
+  height: 61px;
+  padding: 85px 0 27px 0;
+
+  outline: 1px solid blue;
+
+  @media (min-width: @tablet-width) {
+    width: 50%;
+
+    &--eco {
+      order: 0;
+    }
+
+    &--price {
+      order: 2;
+    }
+
+    &--like {
+      order: 4;
+    }
+
+    &--handmade {
+      order: 1;
+    }
+
+    &--homeland {
+      order: 3;
+    }
+
+    &--giftwrap {
+      order: 5;
+    }
   }
 
-  .about-us__title {
-    font-size: 53px;
-    line-height: 57px;
-
-    display: flex;
-
-    width: 65%;
-
-    flex-wrap: wrap;
-  }
-
-  .about-us__list {
-    width: 65%;
-  }
-
-  .about-us__item {
+  @media (min-width: @desktop-width) {
     width: 50%;
   }
 }
