--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -1,27 +1,46 @@
+.catalog {
+  @media (min-width: @desktop-width) {
+    display: flex;
+
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+}
+
 .catalog__item {
   margin-top: 30px;
 
   outline: 1px solid red;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+
+    height: 334px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 30%;
+    height: 659px;
+
+    flex-wrap: wrap;
+  }
+}
+
+.catalog__link-wrapper {
+  @media (min-width: @tablet-width) {
+    width: 50%;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 100%;
+    height: 462px;
+  }
 }
 
 .catalog__img {
   margin: 0 auto;
 
   background-color: rgb(241, 241, 241);
-}
-
-.catalog__title {
-  text-decoration: none;
-
-  outline: 1px solid red;
-}
-
-.catalog__title h2 {
-  font-size: 17px;
-  font-weight: bold;
-  line-height: 24px;
-
-  margin: 0;
 }
 
 .catalog__description {
@@ -32,6 +51,41 @@
   outline: 1px solid red;
 
   flex-wrap: wrap;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-direction: column;
+
+    width: 50%;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 100%;
+  }
+}
+
+.catalog__title {
+  text-decoration: none;
+
+  outline: 1px solid red;
+
+  @media (min-width: @tablet-width) {
+    width: 100%;
+  }
+}
+
+.catalog__title-name {
+  font-size: 17px;
+  font-weight: bold;
+  line-height: 24px;
+
+  margin: 0;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+
+    padding-top: 10%;
+  }
 }
 
 .catalog__specs {
@@ -43,6 +97,12 @@
   padding-bottom: 25px;
 
   outline: 1px solid red;
+
+  @media (min-width: @tablet-width) {
+    font-size: 15px;
+
+    flex-grow: 1;
+  }
 }
 
 .catalog__order {
@@ -59,74 +119,14 @@
   padding: 19px 0;
 
   outline: 1px solid red;
+
+  @media (min-width: @tablet-width) {
+    font-size: spx;
+  }
 }
 
 .catalog__basket-icon {
   width: 35%;
 
   outline: 1px solid red;
-}
-
-@media (min-width: @tablet-width) {
-  .catalog__item {
-    display: flex;
-
-    height: 334px;
-  }
-
-  .catalog__link-wrapper {
-    width: 50%;
-  }
-
-  .catalog__description {
-    display: flex;
-    flex-direction: column;
-
-    width: 50%;
-  }
-
-  .catalog__title {
-    width: 100%;
-  }
-
-  .catalog__title h2 {
-    font-size: 20px;
-
-    padding-top: 10%;
-  }
-
-  .catalog__specs {
-    font-size: 15px;
-
-    flex-grow: 1;
-  }
-
-  .catalog__price {
-    font-size: 17px;
-  }
-}
-
-@media (min-width: @desktop-width) {
-  .catalog {
-    display: flex;
-
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-
-  .catalog__item {
-    width: 30%;
-    height: 659px;
-
-    flex-wrap: wrap;
-  }
-
-  .catalog__description {
-    width: 100%;
-  }
-
-  .catalog__link-wrapper {
-    width: 100%;
-    height: 462px;
-  }
 }
